# logfu

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
log/: __main__.py
tests/: test_log.py
