[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "logfu"
version = "0.1.0"
description = "Write input to a file with size or line limits."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Sagittarius-a", email = "sagittarius-a@users.noreply.github.com" }
]

keywords = ["cli", "log", "tail", "truncate"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Sagittarius-a/logfu"
Issues = "https://github.com/Sagittarius-a/logfu/issues"

[tool.setuptools]
packages = ["log"]

[project.scripts]
log = "log.__main__:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "tox>=4.34",
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py39"
# You can customize selected error codes or plugins here.

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "silent"
# enable some useful checks but keep defaults non-strict
strict = true
show_error_codes = true
